<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.school21</groupId>
    <artifactId>ORM</artifactId>
    <version>1.0</version>


    <properties>
      <java.version>8</java.version>
      <maven.compiler.release>8</maven.compiler.release>
      <project.build.sourceEncoding>
        UTF-8
      </project.build.sourceEncoding>
    </properties>


    <dependencies>
      <dependency>
        <groupId>com.zaxxer</groupId>
        <artifactId>HikariCP</artifactId>
        <version>4.0.3</version>
      </dependency>
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>42.7.4</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>1.18.34</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.8.1</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.8.1</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>5.8.1</version>
        <scope>test</scope>
      </dependency>
    </dependencies>

    <repositories>
      <repository>
        <id>com.zaxxer</id>
        <url>
          https://mvnrepository.com/artifact/com.zaxxer/HikariCP
        </url>
      </repository>
      <repository>
        <id>org.postgresql</id>
        <url>
          https://mvnrepository.com/artifact/org.postgresql/postgresql
        </url>
      </repository>
      <repository>
        <id>org.junit.jupiter</id>
        <url>
          https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
        </url>
      </repository>
    </repositories>



    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId> org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.1</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>edu.school21.app.Main</mainClass>
                        </manifest>
                    </archive>
                    <outputDirectory>target</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>build-helper-maven-plugin</artifactId>
            <version>1.9.1</version>
            <executions>
              <execution>
                <id>add-other-source</id>
                <phase>generate-sources</phase>
                <goals>
                    <goal>add-source</goal>
                </goals>
                <configuration>
                  <sources>
                    <source>TODO</source>
                  </sources>
                </configuration>
              </execution>
            </executions>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-shade-plugin</artifactId>
              <version>3.2.4</version>
                <executions>
                  <execution>
                    <phase>package</phase>
                    <goals>
                      <goal>shade</goal>
                    </goals>
                  </execution>
                </executions>
            </plugin>
            <plugin>
              <groupId>org.jacoco</groupId>
              <artifactId>jacoco-maven-plugin</artifactId>
              <version>0.8.12</version>
              <executions>
                <execution>
                <id>default-prepare-agent</id>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
                <configuration>
                  <destFile>
                    ${project.build.directory}/coverage-reports/jacoco.exec
                  </destFile>
                  <propertyName>surefireArgLine</propertyName>
                  <excludes>
                    <exclude>edu/school21/app/Main.class</exclude>
                  </excludes>
                </configuration>
              </execution>
              <execution>
                <id>default-report</id>
                <phase>test</phase>
                <goals>
                  <goal>report</goal>
                </goals>
                <configuration>
                  <dataFile>
                    ${project.build.directory}/coverage-reports/jacoco.exec
                  </dataFile>
                  <outputDirectory>
                    ${project.reporting.outputDirectory}/jacoco
                  </outputDirectory>
                </configuration>
              </execution>
              <execution>
                <id>default-check</id>
                <goals>
                  <goal>check</goal>
                </goals>
                <configuration>
                  <rules>
                    <rule>
                      <element>BUNDLE</element>
                      <limits>
                        <limit>
                          <counter>COMPLEXITY</counter>
                          <value>COVEREDRATIO</value>
                          <minimum>0.70</minimum>
                        </limit>
                      </limits>
                    </rule>
                  </rules>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.5.0</version>
            <configuration>
              <argLine>
                --illegal-access=permit
              </argLine>
              <testFailureIgnore>true</testFailureIgnore>
              <forkCount>2</forkCount>
              <reuseForks>true</reuseForks>
              <argLine>${surefireArgLine}</argLine> 
            </configuration>
          </plugin>


        </plugins>
    </build>




</project>
